--- a/ex02-ano-bissexto.html
+++ b/ex02-ano-bissexto.html
@@ -26,16 +26,20 @@
             2020: bissexto
             2000: bissexto
             2013: não é
+            
+            A regra vale para anos >=1582
       */
-        let ano = parseInt(prompt('Informe um ano.'))
-        if (isNaN(ano)) {
+        let ano = parseInt(prompt('Informe um ano maior ou igual a 1582.'))
+        if (isNaN(ano) || ano < 1582) {
             alert('Esse ano não é valido.')
         }
-        else if (ano % 400 ===0 || (ano % 4 ===0 && ano % 100 !==0)) {
-            alert('Esse ano é bissexto')
+        else if (ano % 400 ===0 || (ano % 4 ===0 && !(ano % 100 ==0))) {
+           // alert('O ano ' + ano +' é bissexto')
+           // Mensagem usando string template
+           alert(`O ano ${ano} é bissexto.`)
         }
         else {
-            alert ('Esse ano não é bissexto')
+            alert (`O ano ${ano} não é bissexto.`)
         }
 
 
