--- a/06 - estrutura-switch.html
+++ b/06 - estrutura-switch.html
@@ -33,7 +33,34 @@
         else if (isNaN(num2)){
         alert('Digite um número válido')
        }
+       else {
+           //switch.case é uma estrutura de decisão que compara uma única variável
+           //contra uma série de valores.
+        switch(operacao){
+            case '+': 
+                document.write(`${num1} + ${num2} é igual a ${num1 + num2}`)
+                break // Interrompe a ação do switch
 
+            case '-':
+                document.write(`${num1} - ${num2} é igual a ${num1 - num2}`)
+                break
+
+            case '*' :  //case vazio
+            case 'X' :  //case vazio
+            case 'x' :
+                document.write(`${num1} * ${num2} é igual a ${num1 * num2}`)
+                break
+
+            case '/' : //case vazio
+            case ':' :
+                document.write(`${num1} / ${num2} é igual a ${num1 / num2}`)
+                break
+
+            default :  //"else" do switch
+             alert('Digite um operador válido')
+        }
+       }
+/*
        else if (operacao === '+') {
            document.write(`${num1} + ${num2} é igual a ${num1 + num2}`)
        }
@@ -53,7 +80,8 @@
         else {
             alert('O operador informado é inválido!')
         }
-        
+ */
+
     </script>
 </head>
 <body>
