--- a/ex05-placas-mercosul.html
+++ b/ex05-placas-mercosul.html
@@ -40,6 +40,45 @@
             a letra correspondente ao dígito informado.
 
         */
+            let num
+            
+            //Repete a pergunta ao usuario enquanto ele nao informar um numero valido
+            //que esteja na faixa entre 0 e 9
+            do {
+            num = parseInt(prompt('Informe um digito de 0 a 9:'))
+            } while(isNaN(num) || num < 0 || num > 9)
+
+            switch (num) {
+                case 0:
+                    alert('A é a letra correspondente ao digito.')
+                    break
+                case 1:
+                    alert('B é a letra correspondente ao digito.')
+                    break
+                case 2:
+                    alert('C é a letra correspondente ao digito.')
+                    break
+                case 3:
+                    alert('D é a letra correspondente ao digito.')
+                    break
+                case 4:
+                    alert('E é a letra correspondente ao digito.')
+                    break
+                case 5:
+                    alert('F é a letra correspondente ao digito.')
+                    break
+                case 6:
+                    alert('G é a letra correspondente ao digito.')
+                    break
+                case 7:
+                    alert('H é a letra correspondente ao digito.')
+                    break
+                case 8:
+                    alert('I é a letra correspondente ao digito.')
+                    break
+                default:
+                    alert('J é a letra correspondente ao digito.')
+            }
 
     </script>
 </head>
