--- a/ex07-soma-for.html
+++ b/ex07-soma-for.html
@@ -20,6 +20,27 @@
             Utilizando um loop for, calcule a somatória de todos os números entre 
             os dois valores informados (inclusive).            
         */
+        let menor
+        let maior
+        let resultado = 0
+        let num
+        let num2
+        do{
+        num = parseInt(prompt('Digite um número inteiro'))
+        num2 = parseInt(prompt('Digite um segundo número inteiro que seja diferente do primeiro'))
+} while (isNaN(num) || isNaN(num2) || num === num2)
+    if (num > num2) {
+        maior = num
+        menor = num2
+    }
+    else {
+        maior = num2
+        menor = num
+    }
+    for (let i = maior ; i >= menor ; i--) {
+        resultado = resultado + i
+    }
+    document.write(`A somatória dos números entre ${menor} e ${maior} é: ${resultado} `)
 
     </script>
 </head>
