--- a/ex08-for-intervalo.html
+++ b/ex08-for-intervalo.html
@@ -16,6 +16,11 @@
             avançando de 3 em 3, imprima com document.write() apenas os
             valores da variável de controle que sejam múltiplos de 7.
         */
+       for(let i = 3 ; i <=1000 ; i = i+3){
+        if(i % 7 === 0){
+            document.write (i + '<br>')
+        }
+       }
 
     </script>
 </head>
