--- a/ex11-func-sem-retorno.html
+++ b/ex11-func-sem-retorno.html
@@ -42,6 +42,27 @@
             no documento.
 
         */
+       let num, carac
+        // Número entre 1 e 100
+       do{
+           num = parseInt(prompt('Informe um número entre 1 e 100'))
+       } while(isNaN(num) ||  num < 1 || num > 100)
+
+       // Caractere diferente do espaço em branco
+       do{
+           carac = prompt('Informe um caractere diferente de espaço em branco:')
+       }while(carac === ' ')
+
+       function desenharPadrao(numero,caractere){
+           for(let linha = 1;linha <= numero; linha++){ // Controla as linhas
+               for(let c = 1; c <= linha; c++){// Controla cada caractere da linha
+                   document.write(caractere)
+               }
+               document.write('<br>')
+           }
+       }
+       // Chamada da função
+       desenharPadrao(num,carac)
 
     </script>
 </head>
