--- a/ex13-vetor-metro (1).html
+++ b/ex13-vetor-metro (1).html
@@ -57,7 +57,7 @@
                 Faça um loop FOR...OF para exibir as estações e depois
                 passe um traço horizontal (<hr>).            
         */
-        let metro = []
+        const metro = []
         metro.push('Santa Terezinha')
         metro.push('Estação')
         metro.push('Centro')
@@ -82,7 +82,7 @@
         }
         document.write('<hr>')
 
-        metro.splice(4,2,'9 de Julho', 'Champagnat')
+        metro.splice(4,1,'9 de Julho', 'Champagnat')
         for(let i = 0; i < metro.length  ; i++)
         document.write(metro[i] + '<br>')
         document.write('<hr>')
@@ -94,6 +94,10 @@
             document.write(elemento + '<br>')
         }
         document.write('<hr>')
+
+        // Removendo as duas estações
+        //linha.pop() - Tira a ultima
+        //linha.pop() - Tira a penultima
     </script>
 </head>
 <body>
