--- a/17- Objetos.html
+++ b/17- Objetos.html
@@ -77,6 +77,34 @@
         let imc4 = objPaciente4.peso / (objPaciente4.altura ** 2)
         document.write(`O imc do paciente ${objPaciente4.nome} é ${imc4}<br>`)
 
+        // Acessando as propriedades de um objeto por meio de variaveis que
+        // contém o nome das propriedades. Nesse caso, é necessario usar a
+        // sintaxe dos colchetes.
+        let nomeProp1 = 'nome'
+        let nomeProp2 = 'idade'
+        let nomeProp3 = 'peso'
+
+        document.write(`Nome do paciente 4: ${objPaciente4[nomeProp1]}<br>`)
+        document.write(`Idade do paciente 4: ${objPaciente4[nomeProp2]}<br>`)
+        document.write(`Peso do paciente 4: ${objPaciente4[nomeProp3]}<br>`)
+
+        // Como descobrir o nome de todas as propriedades de um objeto?
+        // Resposta: loop for...in
+
+        document.write('--------------------------------------<br>')
+
+        // Descobrindo as propriedades do objPaciente2
+        for(let prop in objPaciente2){
+            document.write(prop + '<br>')
+        }
+
+        document.write('--------------------------------------<br>')
+
+        // Listagem de um objeto com loop for...ir
+        for(let key in objPaciente1){
+            document.write(`${key} => ${objPaciente1[key]}<br>`)
+        }
+
     </script>
 </head>
 <body>
